css/toolbar.css
.gmc-down {
    bottom: 0px;
}

.gmc-left {
    left: -255px;
}


/* extension profile left */

#gmc-profile {
    display: none;
    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
    background: #272727;
    border-top-right-radius: 5px;
    border-bottom-right-radius: 5px;
    position: fixed;
    z-index: 99999;
    bottom: 10%;
    padding: 5px 5px 5px 0;
    width: 250px;
}

#gmc-profile h2 {
    margin: 0;
    font-size: 18px;
    padding: 5px;
    background: #0077b4;
    color: #fff;
    font-weight: 100;
    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
}

.gmc-profile-inner {
    background: #fff;
    color: #272727;
    text-align: center;
}

.gmc-profile-label {
    position: absolute;
    display: block;
    top: calc(50% - 20px);
    right: -40px;
    width: 40px;
    height: 40px;
    border-top-right-radius: 5px;
    border-bottom-right-radius: 5px;
    background: #272727 url(chrome-extension://__MSG_@@extension_id__/images/profileicon.png) no-repeat center center;
    z-index: 99999;
}

.gmc-author-score {
    padding: 10px;
    font-weight: bold;
    border-bottom: 1px solid rgb(172, 172, 172);
}

#gmc-profile .gmc-score,
#gmc-profile .gmc-red {
    color: #ff0000;
}

#gmc-profile .gmc-thank-you {
    font-weight: 500;
    background-color: #ff0000;
    color: #fff;
    padding: 10px;
    font-size: 14px;
    display: none;
}

#gmc-profile .gmc-account-number {
    background: #e9e9e9;
    padding: 20px;
    font-weight: bold;
}

#gmc-profile .gmc-account-number span {
    font-weight: 200;
    display: block;
    /*background: url(chrome-extension://__MSG_@@extension_id__/images/key.png) no-repeat left center;*/
    word-wrap: break-word;
    /*padding-left: 25px;
    */
}

.gmc-profile-inner li {
    background: #e9e9e9;
    margin: 1px 0;
    padding: 8px;
    font-size: 12px;
    line-height: 1;
}

.gmc-profile-inner ul span {
    font-weight: bold;
}

#gmc-profile {
    display: block;
}

.gmc-view-profile {
    display: inline-block;
    background: #00689e;
    color: #fff;
    line-height: 40px;
    padding: 0 20px;
    margin: 20px;
    border: none;
    font-size: 14px;
    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
    text-decoration: none;
}

.gmc-view-profile:visited {
    color: #fff;
}

.gmc-view-profile:hover {
    cursor: pointer;
    -webkit-box-shadow: inset 0px 3px 8px 0px rgba(0, 0, 0, 1);
    -moz-box-shadow: inset 0px 3px 8px 0px rgba(0, 0, 0, 1);
    box-shadow: inset 0px 3px 8px 0px rgba(0, 0, 0, 1);
}

#gmc-profile .gmc-flagged {
    padding: 10px;
    font-size: 12px;
    color: #fff;
    background: #ff0000;
    display: none;
}

#gmc-profile .gmc-flagged img {
    vertical-align: middle;
    margin-right: 10px;
}

.gmc-profile-pic {
    border-radius: 50%;
    display: block;
    width: 115px;
    height: auto;
    margin: 20px auto;
    border: 7px solid #acacac;
}


/* toolbar bottom right */

#gmc-toolbar {
    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
    position: fixed;
    z-index: 99999;
    right: 20px;
    white-space: nowrap;
    overflow: hidden;
    text-align: center;
    cursor: pointer;
    font-size: 14px;
}

#gmc-toolbar ol,
#gmc-profile ol,
#gmc-profile ul,
#gmc-toolbar ul {
    list-style: none;
    padding: 0;
    margin: 0;
}

#gmc-toolbar-container {
    border: 1px solid #d9d9d9;
    border-top-left-radius: 5px;
    clear: both;
}

.gmc-toolbar-label {
    color: #666666;
    float: right;
    width: 22px;
    height: 22px;
    border-top-left-radius: 5px;
    border-top-right-radius: 5px;
    border-left: 1px solid #d9d9d9;
    border-right: 1px solid #d9d9d9;
    border-top: 1px solid #d9d9d9;
    border-bottom: 1px solid #fff;
    margin-bottom: -1px;
    background: #fff;
}

#gmc-toolbar ul li {
    list-style: none;
    float: left;
    margin: 0;
    padding: 0;
    /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#ffffff+0,f6f6f6+47,ededed+100;White+3D+%231 */
    background: #ffffff;
    /* Old browsers */
    background: -moz-linear-gradient(top, #ffffff 0%, #f6f6f6 47%, #ededed 100%);
    /* FF3.6-15 */
    background: -webkit-linear-gradient(top, #ffffff 0%, #f6f6f6 47%, #ededed 100%);
    /* Chrome10-25,Safari5.1-6 */
    background: linear-gradient(to bottom, #ffffff 0%, #f6f6f6 47%, #ededed 100%);
    /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
    filter: progid: DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#ededed', GradientType=0);
    /* IE6-9 */
}

#gmc-toolbar .gmc-scr-label {
    color: #666666;
    /*font-weight: bold;*/
    /*text-transform: uppercase;*/
    line-height: 40px;
    padding: 0 10px;
    font-size: 12px;
    border-left: 1px solid #d9d9d9;
}

#gmc-toolbar .gmc-scr-value,
#gmc-toolbar .gmc-item-score {
    line-height: 40px;
    padding: 0 10px;
    color: #666666;
    font-size: 12px;
}

#gmc-toolbar .gmc-scr-value {
    border-right: 1px solid #d9d9d9;
    border-left: 1px solid #d9d9d9;
}

#gmc-toolbar .gmc-vote-down {
    height: 40px;
    width: 40px;
    border-right: 1px solid #d9d9d9;
    cursor: pointer;
}

#gmc-toolbar .gmc-vote-down:hover {
    -webkit-box-shadow: inset 0px 3px 8px 0px rgba(0, 0, 0, 1);
    -moz-box-shadow: inset 0px 3px 8px 0px rgba(0, 0, 0, 1);
    box-shadow: inset 0px 3px 8px 0px rgba(0, 0, 0, 1);
}

#gmc-toolbar .gmc-vote-up {
    height: 40px;
    width: 40px;
    border-right: 1px solid #d9d9d9;
    cursor: pointer;
}

#gmc-toolbar .fa-thumbs-o-up {
    color: #ff0000;
    line-height: 40px;
}

#gmc-toolbar .fa-thumbs-o-down {
    color: #1f77b4;
    line-height: 40px;
}

#gmc-toolbar .gmc-vote-up:hover {
    -webkit-box-shadow: inset 0px 3px 8px 0px rgba(0, 0, 0, 1);
    -moz-box-shadow: inset 0px 3px 8px 0px rgba(0, 0, 0, 1);
    box-shadow: inset 0px 3px 8px 0px rgba(0, 0, 0, 1);
}

#gmc-toolbar .gmc-profile-self {
    background: #fff url(chrome-extension://__MSG_@@extension_id__/images/profile.png) no-repeat center center;
    height: 40px;
    width: 40px;
    display: none;
    cursor: pointer;
}

#gmc-toolbar .gmc-profile-self img,
#gmc-toolbar .gmc-profile-author img {
    width: 100%;
    height: 100%;
}


/*
#gmc-toolbar .gmc-profile-self img:hover {
    -webkit-box-shadow: inset 0px 3px 8px 0px rgba(0, 0, 0, 1);
    -moz-box-shadow: inset 0px 3px 8px 0px rgba(0, 0, 0, 1);
    box-shadow: inset 0px 3px 8px 0px rgba(0, 0, 0, 1);
}*/

#gmc-toolbar .gmc-profile-author {
    background: #fff url(chrome-extension://__MSG_@@extension_id__/images/profile.png) no-repeat center center;
    height: 40px;
    width: 40px;
    display: none;
    cursor: pointer;
}

#gmc-toolbar .gmc-profile-author img {
    border-top-left-radius: 5px;
}


/*
#gmc-toolbar .gmc-profile-author img:hover {
    -webkit-box-shadow: inset 0px 3px 8px 0px rgba(0, 0, 0, 1);
    -moz-box-shadow: inset 0px 3px 8px 0px rgba(0, 0, 0, 1);
    box-shadow: inset 0px 3px 8px 0px rgba(0, 0, 0, 1);
}*/


/* 'Give Me Credit' widget css */

#gmc-widget {
    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
    margin: 20px 0;
    display: inline-block;
    border: 1px solid #d9d9d9;
    border-radius: 5px;
    -webkit-box-sizing: content-box;
    -moz-box-sizing: content-box;
    box-sizing: content-box;
    /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#ffffff+0,f6f6f6+47,ededed+100;White+3D+%231 */
    background: #ffffff;
    /* Old browsers */
    background: -moz-linear-gradient(top, #ffffff 0%, #f6f6f6 47%, #ededed 100%);
    /* FF3.6-15 */
    background: -webkit-linear-gradient(top, #ffffff 0%, #f6f6f6 47%, #ededed 100%);
    /* Chrome10-25,Safari5.1-6 */
    background: linear-gradient(to bottom, #ffffff 0%, #f6f6f6 47%, #ededed 100%);
    /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
    filter: progid: DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#ededed', GradientType=0);
    /* IE6-9 */
}

#gmc-widget .gmc {
    display: inline-block;
    height: 40px;
    line-height: 40px;
    padding: 0 10px;
    font-size: 12px;
    vertical-align: bottom;
    cursor: pointer;
    border-right: 1px solid #d9d9d9;
    color: #666666;
    /*background: #ff0000;*/
}

#gmc-widget .gmc:hover {
    -webkit-box-shadow: inset 0px 3px 8px 0px rgba(0, 0, 0, 1);
    -moz-box-shadow: inset 0px 3px 8px 0px rgba(0, 0, 0, 1);
    box-shadow: inset 0px 3px 8px 0px rgba(0, 0, 0, 1);
}

#gmc-widget .gmc-amount {
    display: inline-block;
    height: 40px;
    line-height: 40px;
    padding: 0 10px;
    font-size: 12px;
    vertical-align: bottom;
    color: #ff0000;
    font-weight: bold;
    border-right: 1px solid #d9d9d9;
}

#gmc-widget .gmc-arrows {
    display: inline-block;
    height: 40px;
    vertical-align: bottom;
    padding: 0 0 0 10px;
    color: #1f77b4;
    font-size: 16px;
}

#gmc-widget .gmc-arrow-up,
#gmc-widget .gmc-arrow-down {
    display: block;
    line-height: 20px;
    text-align: center;
    width: 20px;
    margin: auto;
    cursor: pointer;
}

